// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayActionsDropdown should render an expanded action dropdown 1`] = `
<div class="dropdown show dropdown-action">
  <button aria-expanded="true" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled">
    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
      <use xlink:href="icons.svg#ellipsis-v"></use>
    </svg>
  </button>
  <div class="dropdown-menu show" style="top: 0px; left: 0px;">
    <div>
      <a class="dropdown-item" href="item1url">Item 1</a>
    </div>
    <div>
      <a class="dropdown-item" href="item2url">Item 2</a>
    </div>
  </div>
</div>
`;

exports[`ClayActionsDropdown should render default markdown 1`] = `
<div class="dropdown dropdown-action">
  <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled">
    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
      <use xlink:href="icons.svg#ellipsis-v"></use>
    </svg>
  </button>
  <div class="dropdown-menu">
    <div>
      <a class="dropdown-item" href="item1url">Item 1</a>
    </div>
    <div>
      <a class="dropdown-item" href="item2url">Item 2</a>
    </div>
  </div>
</div>
`;
